# exceptionhandling

./: pyproject.toml  setup.cfg
exceptionhandling/: __init__.py  access.py  example.py  exception_handler.py  functor.py  strings.py  utils.py
src/: access.py  exception_handler.py  utils.py
tests/: access.py  exception_handler.py  utils.py
