[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "exception_handling_hofmetyl"
version = "0.0.1"
authors = [
  { name="Tyler Hofmeister", email="tyler.hofmeister@gmail.com" },
]
description = "A package aiding with monadic exception handling, based on the expression package"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "traceback",
  "abc",
  "expression"
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"