# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exceptionhandling"
version = "0.0.29"
description = "Handle exceptions using monoids"
readme = "README.md"
authors = [{ name = "Tyler Hofmeister", email = "tyler.hofmeister@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["exception", "error", "monadic"]
dependencies = [
    'tomli; python_version < "3.9"'
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/tylerhof/exceptionhandling"

#Note: to build, update version, then in base terminal run:
# python3 -m build --sdist --wheel .
#
#Note: to release, in venv run:
# twine upload -r testpypi dist/*
#
# Note to install in another project run:
# pip install --upgrade --index-url https://test.pypi.org/simple/ exceptionhandling