[metadata]
name = exceptionhandling
version = 0.0.1
author = Tyler Hofmeister
author_email = tyler.hofmeister@gmail.com
description = A package to aid with monadic exception handling
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tylerhof/exceptionhandling
project_urls =
    Bug Tracker = https://github.com/tylerhof/exceptionhandling/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = exceptionhandling
packages = find:
python_requires = >=3.11

[options.packages.find]
where = exceptionhandling